# llmx

./: .bashrc  .gitignore  .mcp.json  .shell-common.sh  .zshrc  1  AGENTS.md  BURN_CODE_REVIEW.md  BURN_CODE_REVIEW_FOLLOWUP.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  http-8001.pid  http-8002.pid  install.sh  justfile  llms.txt  session-start-fixed  test_mcp_server.sh
.claude/: settings.json  settings.local.json
.claude/skills/llmx/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: AGENT_HANDOFF.md  BROWSER_TESTING.md  CLAUDE_CODE_INTEGRATION.md  CUTTING_EDGE_ENHANCEMENTS.md  HANDOFF_2026-03-14.md  INGESTION_SPEC.md  LLMCAT_DEPLOY.md  LLMCAT_INTEGRATION_PLAN.md  LLMX-EXPORT-FOR-OPUS-REVIEW.md  LLMX_NEXT_LEVEL_ARCHITECTURE.md  LLMX_V3_SPEC.md  P5_HANDOFF.md  PHASE6_COMPLETION_CHECKLIST.md  PHASE6_FINAL_SUMMARY.md  PHASE_1_5_CHECKLIST.md  PHASE_4_BASELINE_BENCHMARKS.md  PHASE_4_COMPLETION_ANALYSIS.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_DIRECTIONS.md  PHASE_4_MCP_VERIFICATION.md  PHASE_4_POLISH_CHECKLIST.md  PHASE_5_COMPLETION_REPORT.md  PHASE_5_DIRECTIONS.md  QUICK_START_PHASE_5.md  REVIEW_REPORT.md  SEMANTIC_SEARCH_GUIDE.md  SEMANTIC_SEARCH_GUIDE_v2.md  SPECHO_V2_ANALYSIS.md  STABLE_BACKPORT_PATCHES.md  STABLE_BACKPORT_PLAN.md  STABLE_HARDENING_SUMMARY.md  USAGE.md  llms.txt  llmx-export-evaluation.md  llmx-size-comparison.md  llmx-v5-design-prompt.md  opus-evaluation-results.md
docs/templates/: AGENTS_TEMPLATE.md  llms.template.txt
export/: llm.md  manifest.json
export/chunks/: 002f601b6448.md  003c4b5b0459.md  00554aeceef3.md  00878d2e488f.md  00acd949f444.md  00ad812658e2.md  00dfc932628d.md  00f82ceebea4.md  0109e7b7c85f.md  018584d1c07e.md  018808051426.md  01b83c0b0399.md  01daf4f1ee27.md  01e4069b6b65.md  023f51c42473.md  024742aaad90.md  024d82979b97.md  02e00c80cb93.md  02e43c072e00.md  02ecc1d3571b.md  030fa88433ce.md  0321bcb3ee43.md  03715b753a57.md  03c70b91fff0.md  03dcc32613a5.md  040ead70a8e9.md  0411d55a5dba.md  041aecc8965d.md  04225b23abc9.md  0440ddd12002.md  047cd1ff3489.md  04bf0442f4b7.md  04d562a9afc8.md  04de191fb6e8.md  0541bd14f2e8.md  0555aebd5e03.md  056af2a51446.md  056cf3d79184.md  058865d7163e.md  059a4a3b8c69.md  (+1368 more)
ingestor-core/: Cargo.toml  build.rs  spike.rs
ingestor-core/benches/: baseline.rs
ingestor-core/src/: bert.rs  chunk.rs  embedding_store.rs  embeddings.rs  export.rs  export.rs.backup  graph.rs  index.rs  lib.rs  model.rs  pathnorm.rs  query.rs  registry_lock.rs  rrf.rs  symbol_search.rs  util.rs  walk.rs
ingestor-core/src/chunk/: generic.rs  language.rs  legacy.rs  registry.rs  symbol_id.rs
ingestor-core/src/handlers/: cache.rs  mod.rs  safety.rs  storage.rs  types.rs
ingestor-core/src/mcp/: jobs.rs  mod.rs  storage.rs  tools.rs
ingestor-core/tests/: chunking_tests.rs  cli_tests.rs  edge_cases_tests.rs  export_tests.rs  filetype_tests.rs  handler_tests.rs  hig_usability_tests.rs  mcp_tests.rs  mcp_v2_tools_tests.rs  smoke_tests.rs  token_savings_tests.rs
ingestor-core/tests/common/: mod.rs
ingestor-core/tests/fixtures/: sample.html  sample.js  sample.json  sample.md  sample.txt
ingestor-core/tests/fixtures/edge_cases/: long_lines.txt  mixed_line_endings.txt  unicode_content.md
ingestor-core/tests/fixtures/filetypes/c_cpp/: sample.c  sample.cpp  sample.h
ingestor-core/tests/fixtures/filetypes/data/: sample.json  sample.toml  sample.yaml
ingestor-core/tests/fixtures/filetypes/docs/: sample.md  sample.txt
ingestor-core/tests/fixtures/filetypes/go/: sample.go
ingestor-core/tests/fixtures/filetypes/javascript/: sample.cjs  sample.js  sample.jsx  sample.mjs  sample.ts  sample.tsx
ingestor-core/tests/fixtures/filetypes/python/: sample.py
ingestor-core/tests/fixtures/filetypes/rust/: sample.rs
ingestor-core/tests/fixtures/filetypes/shell/: sample.sh
ingestor-core/tests/fixtures/filetypes/sql/: sample.sql
ingestor-core/tests/fixtures/filetypes/web/: sample.css  sample.html  sample.scss
ingestor-core/tests/fixtures/projects/small/: Cargo.toml  README.md
ingestor-core/tests/fixtures/projects/small/src/: config.rs  main.rs  utils.rs
ingestor-wasm/: Cargo.toml  build.rs
ingestor-wasm/.cargo/: config.toml
ingestor-wasm/src/: backend_tests.rs  bert.rs  embeddings_burn.rs  embeddings_burn.rs.cpu-only-backup  lib.rs  model_loader.rs  quantization_test.rs
llmx-export/: llm.md
llmx-export/chunks/: 0001.md
pkg/: update-packages.sh
pkg/aur/: PKGBUILD
pkg/homebrew/: llmx.rb
scripts/: prepare_llmcat_web.sh
web/: SETTINGS-UI-REDESIGN.md  app.js  index-insights.js  index.html  server.pid  styles.css  worker.js
