[package]
name = "ingestor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
tree-sitter = { version = "0.20", optional = true }
tree-sitter-javascript = { version = "0.20", optional = true }
tree-sitter-typescript = { version = "0.20", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Phase 5: Semantic search dependencies
# TODO: Add back when implementing real ONNX models
# ort = { version = "1.16", optional = true }
# tokenizers = { version = "0.15", optional = true }
# ndarray = { version = "0.15", optional = true }

[features]
default = ["treesitter"]
treesitter = ["tree-sitter", "tree-sitter-javascript", "tree-sitter-typescript"]
mcp = ["dep:rmcp", "dep:schemars", "dep:tokio", "dep:dirs", "dep:tracing", "dep:tracing-subscriber", "dep:anyhow", "embeddings"]
embeddings = []

[[bin]]
name = "llmx-mcp"
path = "src/bin/mcp_server.rs"
required-features = ["mcp"]

[dependencies.rmcp]
version = "0.3"
optional = true
features = ["server", "transport-io"]

[dependencies.schemars]
version = "1.0"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["rt-multi-thread", "macros", "fs"]

[dependencies.dirs]
version = "5"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["env-filter"]

[dependencies.anyhow]
version = "1"
optional = true

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "baseline"
harness = false
