[package]
name = "ingestor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
tree-sitter = { version = "0.20", optional = true }
tree-sitter-javascript = { version = "0.20", optional = true }
tree-sitter-typescript = { version = "0.20", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Dynamic search dependencies
ignore = "0.4"  # .gitignore-aware file walking (same as ripgrep)
lru = "0.16"    # LRU cache for dynamic index caching

# Phase 5: ONNX-based semantic embeddings (MCP server only)
# Note: Phase 6 uses Burn framework for WASM, not ort
ort = { version = "2.0.0-rc.11", optional = true }
tokenizers = { version = "0.20", optional = true }
ndarray = { version = "0.16", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[features]
default = ["treesitter"]
treesitter = ["tree-sitter", "tree-sitter-javascript", "tree-sitter-typescript"]
mcp = ["dep:rmcp", "dep:schemars", "dep:tokio", "dep:dirs", "dep:tracing", "dep:tracing-subscriber", "dep:anyhow", "embeddings"]
cli = ["dep:clap", "dep:dirs", "dep:anyhow", "embeddings"]
embeddings = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:reqwest"]

[[bin]]
name = "llmx-mcp"
path = "src/bin/mcp_server.rs"
required-features = ["mcp"]

[[bin]]
name = "llmx"
path = "src/bin/llmx.rs"
required-features = ["cli"]

[dependencies.rmcp]
version = "0.3"
optional = true
features = ["server", "transport-io"]

[dependencies.schemars]
version = "1.0"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["rt-multi-thread", "macros", "fs"]

[dependencies.dirs]
version = "5"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["env-filter"]

[dependencies.anyhow]
version = "1"
optional = true

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
criterion = "0.5"
test-case = "3"
assert_cmd = "2"
predicates = "3"

[[bench]]
name = "baseline"
harness = false
