[package]
name = "llmx-mcp"
version = "2.2.1"
edition = "2021"
description = "Fast codebase indexing and semantic search MCP server with BM25 and hybrid embeddings"
license = "MIT"
repository = "https://github.com/johnzfitch/llmx"
homepage = "https://llm.cat"
documentation = "https://github.com/johnzfitch/llmx#readme"
keywords = ["mcp", "search", "indexing", "embeddings", "rag"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"

[dependencies]
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
tree-sitter = { version = "0.20", optional = true }
tree-sitter-javascript = { version = "0.20", optional = true }
tree-sitter-typescript = { version = "0.20", optional = true }
tree-sitter-rust = { version = "0.20", optional = true }
tree-sitter-python = { version = "0.20", optional = true }
tree-sitter-go = { version = "0.20", optional = true }
tree-sitter-java = { version = "0.20", optional = true }
tree-sitter-c = { version = "0.20", optional = true }
tree-sitter-cpp = { version = "0.20", optional = true }
tree-sitter-c-sharp = { version = "0.20", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Dynamic search dependencies
ignore = "0.4"  # .gitignore-aware file walking (same as ripgrep)
lru = "0.16"    # LRU cache for dynamic index caching
notify = "6"
url = "2"
strsim = "0.11" # Fuzzy string matching for command suggestions

# Phase 6: Burn-based semantic embeddings (pure Rust, no C++ runtime)
burn = { version = "0.21.0-pre.2", default-features = false, features = ["std"], optional = true }
burn-ndarray = { version = "0.21.0-pre.2", optional = true }
burn-wgpu = { version = "0.21.0-pre.2", optional = true }
tokenizers = { version = "0.20", default-features = false, features = ["unstable_wasm"], optional = true }

[features]
default = ["treesitter", "mcp", "mcp-http", "wgpu-backend"]
treesitter = [
    "tree-sitter",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-rust",
    "tree-sitter-python",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-c-sharp",
]
mcp = ["dep:rmcp", "dep:schemars", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:getrandom", "dep:clap"]
mcp-http = ["mcp", "dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes"]
cli = ["dep:clap"]
embeddings = ["dep:burn", "dep:tokenizers"]
ndarray-backend = ["embeddings", "dep:burn-ndarray"]
wgpu-backend = ["embeddings", "dep:burn-wgpu", "ndarray-backend"]

[[bin]]
name = "llmx-mcp"
path = "src/bin/mcp_server.rs"
required-features = ["mcp"]

[[bin]]
name = "llmx"
path = "src/bin/llmx.rs"
required-features = ["cli"]

[dependencies.rmcp]
version = "0.3"
optional = true
features = ["server", "transport-io"]

[dependencies.schemars]
version = "1.0"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = ["rt-multi-thread", "macros", "fs", "net"]

[dependencies.dirs]
version = "6"

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["env-filter"]

[dependencies.anyhow]
version = "1"

[dependencies.getrandom]
version = "0.4"
optional = true

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.hyper]
version = "1"
features = ["server", "client", "http1"]
optional = true

[dependencies.hyper-util]
version = "0.1"
features = ["tokio", "http1", "service", "client-legacy"]
optional = true

[dependencies.http-body-util]
version = "0.1"
optional = true

[dependencies.bytes]
version = "1"
optional = true

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
criterion = "0.5"
test-case = "3"
assert_cmd = "2"
predicates = "3"

[build-dependencies]
burn = { version = "0.21.0-pre.2", default-features = false }
burn-ndarray = { version = "0.21.0-pre.2" }
burn-store = { version = "0.21.0-pre.2" }
sha2 = "0.10"

[[bench]]
name = "baseline"
harness = false
