[package]
name = "ingestor-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ingestor-core = { path = "../ingestor-core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"

# WASM getrandom fix - required for Burn 0.20+ in browser
# See: https://github.com/rust-random/getrandom/#webassembly-support
getrandom = { version = "0.3.3", default-features = false, features = ["wasm_js"] }

# Phase 6: Burn framework for WebGPU embeddings
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false }
burn-wgpu = { git = "https://github.com/tracel-ai/burn", branch = "main", optional = true }
burn-ndarray = { git = "https://github.com/tracel-ai/burn", branch = "main", optional = true }
# Tokenizers with WASM support (using unstable_wasm feature for pure Rust regex)
tokenizers = { version = "0.20", default-features = false, features = ["unstable_wasm"] }

# For fetching model weights from CDN
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "DomStringList",
    "Event",
    "Location",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
]

[features]
default = ["ndarray-backend"]
wgpu-backend = ["burn-wgpu"]
ndarray-backend = ["burn-ndarray"]

[build-dependencies]
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", default-features = false }
burn-ndarray = { git = "https://github.com/tracel-ai/burn", branch = "main" }
burn-import = { git = "https://github.com/tracel-ai/burn", branch = "main" }
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
burn-import = { git = "https://github.com/tracel-ai/burn", branch = "main" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
