[package]
name = "ingestor-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
llmx-mcp = { path = "../ingestor-core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"

# Phase 6: Burn framework for WebGPU embeddings
burn = { version = "0.21.0-pre.2", default-features = false }
burn-wgpu = { version = "0.21.0-pre.2", optional = true }
burn-ndarray = { version = "0.21.0-pre.2", optional = true }
# Tokenizers with WASM support (using unstable_wasm feature for pure Rust regex)
tokenizers = { version = "0.20", default-features = false, features = ["unstable_wasm"] }

# For fetching model weights from CDN
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "DomStringList",
    "Event",
    "Location",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
]

[features]
default = ["wgpu-backend"]
wgpu-backend = ["burn-wgpu", "ndarray-backend"]
ndarray-backend = ["burn-ndarray"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Enable js-backed entropy for getrandom 0.4 pulled in by Burn/rand on wasm32.
getrandom = { version = "0.4", features = ["wasm_js"] }

[build-dependencies]
burn = { version = "0.21.0-pre.2", default-features = false }
burn-ndarray = { version = "0.21.0-pre.2" }
burn-store = { version = "0.21.0-pre.2" }
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
burn-store = { version = "0.21.0-pre.2" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
